# paperscope

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: arxiv_tool.py  embed_test.py  ingest_and_search.py  lc_agent.py  lc_hello.py  rag.py  week1_arxiv.py
